# todo-py

./: .env.example  .gitignore  Makefile  README.md  pytodo.code-workspace
assets/: arenda.xlsx  (+1 more)
services/crud-django-service/: .dockerignore  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml  requirements.txt  ruff.toml
services/crud-django-service/src/config/: config.py  settings.py  urls.py
services/crud-django-service/src/todo/: admin.py  celery.py  id_gen.py  models.py  permissions.py  security.py  serializers.py  tasks.py  urls.py  views.py
services/crud-django-service/src/todo/api/: pagination.py
services/crud-django-service/src/todo/migrations/: 0001_initial.py  0002_alter_telegramaccount_user_id.py  0002_telegramaccount_linked_at_and_more.py  0003_remove_telegramaccount_unique_user_chat_id.py  0003_remove_telegramaccount_user_delete_telegramlinkcode_and_more.py  0004_alter_category_name_and_more.py  0004_remove_category_unique_user_category_name_and_more.py
services/telegram-bot/: Dockerfile  api_client.py  main.py  pyproject.toml
services/telegram-bot/app/: __main__.py
services/telegram-bot/app/bot/: _runner.py  runner.py
services/telegram-bot/app/bot/handlers/: basic.py  fallback.py  profile.py
services/telegram-bot/app/dialogs/: _states.py  category_create.py  category_list.py  menu.py  profile.py  task_create.py  tasks.py
services/telegram-bot/app/dialogs/categories/: create.py  list_all.py
services/telegram-bot/app/infra/: config.py  db.py  http.py  logging.py
services/telegram-bot/app/middlewares/: auth_middleware.py
services/telegram-bot/app/models/: base.py
services/telegram-bot/app/services/: categories.py  tasks.py  telegram.py
services/telegram-bot/app/widgets/: vertical_select.py
(+11 files in other folders)
